# deepresearch-eval

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
agent/: plan_execute.py
chroma_data/: chroma.sqlite3
data/: test_docs.py
docs/: DAY2_GUIDE.md
mcp_client/: demo.py
mcp_server/: main.py
memory/: short_term_and_long.py
notebooks/: 01_langgraph_quickstart.py  02_langgraph_supervisor.py  04_hybrid_search.py  05_rag_eval.py  06_memory_demo.py  07_rag_agent.py  08_llm_principles.py
rag/: chunker.py  eval.py  retriever.py
