[project]
name = "deepresearch-eval"
version = "0.1.0"
description = "A deep research agent with full evaluation pipeline — built for 2026 校招 Agent 工程师 portfolio"
authors = [{ name = "Wang Yuqi", email = "your-email@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LLM / Agent
    "langgraph>=0.2.50",
    "langchain>=0.3.10",
    "langchain-openai>=0.2.10",
    "langchain-anthropic>=0.3.0",

    # MCP
    "mcp>=1.0.0",

    # 工具实现
    "httpx>=0.27.0",          # fetch_url 用
    "beautifulsoup4>=4.12.0", # 网页解析
    "tavily-python>=0.5.0",   # 搜索 API（可选）

    # 通用
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",           # 漂亮的命令行输出
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # 行长由 ruff format 处理

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
